--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -63,7 +63,7 @@
     <ScrollView
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/footer"
         app:layout_constraintTop_toBottomOf="@+id/banner">
 
@@ -81,6 +81,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/product_item"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp">
@@ -94,7 +95,6 @@
 
                         <!-- Ảnh sản phẩm -->
                         <ImageView
-                            android:id="@+id/product_image"
                             android:layout_width="match_parent"
                             android:layout_height="165dp"
                             android:scaleType="centerCrop"
@@ -102,7 +102,6 @@
 
                         <!-- Tên sản phẩm -->
                         <TextView
-                            android:id="@+id/product_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingTop="8dp"
@@ -114,7 +113,6 @@
 
                         <!-- Giá sản phẩm -->
                         <TextView
-                            android:id="@+id/product_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingBottom="4dp"
@@ -125,6 +123,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/product_item1"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp">
@@ -138,7 +137,6 @@
 
                         <!-- Ảnh sản phẩm -->
                         <ImageView
-                            android:id="@+id/product_image"
                             android:layout_width="match_parent"
                             android:layout_height="165dp"
                             android:scaleType="centerCrop"
@@ -146,7 +144,6 @@
 
                         <!-- Tên sản phẩm -->
                         <TextView
-                            android:id="@+id/product_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingTop="8dp"
@@ -158,7 +155,6 @@
 
                         <!-- Giá sản phẩm -->
                         <TextView
-                            android:id="@+id/product_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingBottom="4dp"
@@ -168,6 +164,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -176,6 +173,7 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
+                    android:id="@+id/product_item2"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp">
@@ -189,7 +187,6 @@
 
                         <!-- Ảnh sản phẩm -->
                         <ImageView
-                            android:id="@+id/product_image"
                             android:layout_width="match_parent"
                             android:layout_height="165dp"
                             android:scaleType="centerCrop"
@@ -197,7 +194,6 @@
 
                         <!-- Tên sản phẩm -->
                         <TextView
-                            android:id="@+id/product_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingTop="8dp"
@@ -209,7 +205,6 @@
 
                         <!-- Giá sản phẩm -->
                         <TextView
-                            android:id="@+id/product_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingBottom="4dp"
@@ -220,6 +215,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/product_item3"
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp">
@@ -233,7 +229,6 @@
 
                         <!-- Ảnh sản phẩm -->
                         <ImageView
-                            android:id="@+id/product_image"
                             android:layout_width="match_parent"
                             android:layout_height="165dp"
                             android:scaleType="centerCrop"
@@ -241,7 +236,6 @@
 
                         <!-- Tên sản phẩm -->
                         <TextView
-                            android:id="@+id/product_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingTop="8dp"
@@ -253,7 +247,98 @@
 
                         <!-- Giá sản phẩm -->
                         <TextView
-                            android:id="@+id/product_price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="4dp"
+                            android:text="500,000 VND"
+                            android:textColor="#FF5722"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/product_item5"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:padding="8dp">
+
+                        <!-- Ảnh sản phẩm -->
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="165dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/img_1" />
+
+                        <!-- Tên sản phẩm -->
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="8dp"
+                            android:paddingBottom="4dp"
+                            android:text="Tên sản phẩm"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <!-- Giá sản phẩm -->
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingBottom="4dp"
+                            android:text="500,000 VND"
+                            android:textColor="#FF5722"
+                            android:textSize="16sp" />
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/product_item6"
+                    android:layout_width="180dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:padding="8dp">
+
+                        <!-- Ảnh sản phẩm -->
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="165dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/img_1" />
+
+                        <!-- Tên sản phẩm -->
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="8dp"
+                            android:paddingBottom="4dp"
+                            android:text="Tên sản phẩm"
+                            android:textColor="#000000"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <!-- Giá sản phẩm -->
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingBottom="4dp"
