--- a/app/src/main/res/layout/layout_home.xml
+++ b/app/src/main/res/layout/layout_home.xml
@@ -233,7 +233,7 @@
 
                         <!-- Ảnh sản phẩm -->
                         <ImageView
-                            android:id="@+id/product_image4"
+                            android:id="@+id/product_image"
                             android:layout_width="match_parent"
                             android:layout_height="165dp"
                             android:scaleType="centerCrop"
