--- a/app/src/main/res/layout/user_register.xml
+++ b/app/src/main/res/layout/user_register.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imgLogin"
         android:layout_width="wrap_content"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/login_img" />
